objects/IAM_CDH_Cross_references__c.object
<CustomObject>
    <fields>
        <fullName>FSLSite_Contact_Phone__c</fullName>
        <label>Site Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FSL_Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_Address_Line_3__c</fullName>
        <label>Address Line 3</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_Branch_Code__c</fullName>
        <label>Branch Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_Country__c</fullName>
        <defaultValue>$User.Country</defaultValue>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Afghanistan</fullName>
                    <isActive>false</isActive>
                    <label>Afghanistan</label>
                </value>
                <value>
                    <fullName>Albania</fullName>
                    <isActive>false</isActive>
                    <label>Albania</label>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                    <isActive>false</isActive>
                    <label>Algeria</label>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                    <isActive>false</isActive>
                    <label>Andorra</label>
                </value>
                <value>
                    <fullName>Angola</fullName>
                    <isActive>false</isActive>
                    <label>Angola</label>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                    <isActive>false</isActive>
                    <label>Anguilla</label>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                    <isActive>false</isActive>
                    <label>Antigua and Barbuda</label>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                    <isActive>false</isActive>
                    <label>Aruba</label>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                    <isActive>false</isActive>
                    <label>Azerbaijan</label>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                    <isActive>false</isActive>
                    <label>Bahrain</label>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                    <isActive>false</isActive>
                    <label>Bangladesh</label>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                    <isActive>false</isActive>
                    <label>Barbados</label>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                    <isActive>false</isActive>
                    <label>Belize</label>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                    <isActive>false</isActive>
                    <label>Bermuda</label>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                    <isActive>false</isActive>
                    <label>Bolivia</label>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                    <isActive>false</isActive>
                    <label>Bosnia and Herzegovina</label>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                    <isActive>false</isActive>
                    <label>Brazil</label>
                </value>
                <value>
                    <fullName>British Virgin Islands</fullName>
                    <isActive>false</isActive>
                    <label>British Virgin Islands</label>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                    <isActive>false</isActive>
                    <label>Cameroon</label>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Cape Verde</fullName>
                    <isActive>false</isActive>
                    <label>Cape Verde</label>
                </value>
                <value>
                    <fullName>Caribbean</fullName>
                </value>
                <value>
                    <fullName>Cayman Islands</fullName>
                    <isActive>false</isActive>
                    <label>Cayman Islands</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL_Distributor_Code__c</fullName>
        <label>Distributor Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_Job_Contact_Name__c</fullName>
        <formula>FSL_Job_Contact__r.FirstName &amp; &quot; &quot; &amp; FSL_Job_Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_Job_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.IAM_Account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>IAM Sites</relationshipLabel>
        <relationshipName>CDH_Cross_references</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL_Latitude__c</fullName>
        <label>Latitude</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_Longitude__c</fullName>
        <label>Longitude</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_MoveX_Contact_Id__c</fullName>
        <label>Contact Id</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_MoveX_Site_Id__c</fullName>
        <externalId>true</externalId>
        <label>Site Id</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_Site_Contact_Email__c</fullName>
        <label>Site Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FSL_Site_Contact_Name__c</fullName>
        <label>Site Contact Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_Site_Status__c</fullName>
        <label>Site Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL_State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>FSL_Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>&apos;Eua</fullName>
                </value>
                <value>
                    <fullName>3090 Overjise</fullName>
                </value>
                <value>
                    <fullName>Aberdeen</fullName>
                </value>
                <value>
                    <fullName>Aberdeenshire</fullName>
                </value>
                <value>
                    <fullName>Abu Dhabi</fullName>
                </value>
                <value>
                    <fullName>Acquaviva</fullName>
                </value>
                <value>
                    <fullName>Adana</fullName>
                </value>
                <value>
                    <fullName>Adiyaman</fullName>
                </value>
                <value>
                    <fullName>Afyonkarahisar</fullName>
                </value>
                <value>
                    <fullName>Agder</fullName>
                </value>
                <value>
                    <fullName>Agri</fullName>
                </value>
                <value>
                    <fullName>Agrigento</fullName>
                </value>
                <value>
                    <fullName>Aguascalientes</fullName>
                </value>
                <value>
                    <fullName>Aileu</fullName>
                </value>
                <value>
                    <fullName>Ainaro</fullName>
                </value>
                <value>
                    <fullName>Aitutak</fullName>
                </value>
                <value>
                    <fullName>Akershus</fullName>
                </value>
                <value>
                    <fullName>Aksaray</fullName>
                </value>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Álava</fullName>
                </value>
                <value>
                    <fullName>Alba</fullName>
                </value>
                <value>
                    <fullName>Albacete</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Alberta</fullName>
                </value>
                <value>
                    <fullName>Alessandria</fullName>
                </value>
                <value>
                    <fullName>Alicante</fullName>
                </value>
                <value>
                    <fullName>Almeria</fullName>
                </value>
                <value>
                    <fullName>Alsace</fullName>
                </value>
                <value>
                    <fullName>Amasya</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL_Tax_District__c</fullName>
        <label>Tax District</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>FSL_Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BC</fullName>
                </value>
                <value>
                    <fullName>BCEX</fullName>
                </value>
                <value>
                    <fullName>BCXLBR</fullName>
                </value>
                <value>
                    <fullName>CAN</fullName>
                </value>
                <value>
                    <fullName>CANEX</fullName>
                </value>
                <value>
                    <fullName>CATANO</fullName>
                </value>
                <value>
                    <fullName>CATANOL</fullName>
                </value>
                <value>
                    <fullName>CATANOX</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>CTE</fullName>
                </value>
                <value>
                    <fullName>EXE</fullName>
                </value>
                <value>
                    <fullName>EXEMPT</fullName>
                </value>
                <value>
                    <fullName>EXP</fullName>
                </value>
                <value>
                    <fullName>GOV</fullName>
                </value>
                <value>
                    <fullName>GST</fullName>
                </value>
                <value>
                    <fullName>GSTEX</fullName>
                </value>
                <value>
                    <fullName>GSTEXEMPT</fullName>
                </value>
                <value>
                    <fullName>HSTBC</fullName>
                </value>
                <value>
                    <fullName>HSTBCEX</fullName>
                </value>
                <value>
                    <fullName>HSTON</fullName>
                </value>
                <value>
                    <fullName>HSTONEX</fullName>
                </value>
                <value>
                    <fullName>INT</fullName>
                </value>
                <value>
                    <fullName>INTERNAL</fullName>
                </value>
                <value>
                    <fullName>LLOYD</fullName>
                </value>
                <value>
                    <fullName>MAN</fullName>
                </value>
                <value>
                    <fullName>MANEX</fullName>
                </value>
                <value>
                    <fullName>MAN-GOV&apos;T</fullName>
                </value>
                <value>
                    <fullName>MAN-GOVT</fullName>
                </value>
                <value>
                    <fullName>MTV</fullName>
                </value>
                <value>
                    <fullName>NAS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAM_Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>IAM_CDH_Cross_references</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IAM_Customer_ID__c</fullName>
        <label>Customer ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Party_Site_ID__c</fullName>
        <inlineHelpText>this to represent Party Site Site ID</inlineHelpText>
        <label>Party Site ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Source_System__c</fullName>
        <label>Source System</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsConverted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsConverted</label>
        <type>Checkbox</type>
    </fields>
    <label>IAM Site</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IAM Sites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Tax_District_for_Canada_and_Caribbean</fullName>
        <active>false</active>
        <errorConditionFormula>AND(OR(ISPICKVAL(FSL_Country__c, &quot;Canada&quot;), ISPICKVAL(FSL_Country__c, &quot;Caribbean&quot;)), ISPICKVAL(FSL_Tax_District__c, &quot;&quot;))</errorConditionFormula>
        <errorDisplayField>FSL_Tax_District__c</errorDisplayField>
        <errorMessage>Tax District is required.</errorMessage>
    </validationRules>
</CustomObject>